--- a/Tailspin.WebUpgraded/packages.config
+++ b/Tailspin.WebUpgraded/packages.config
@@ -7,6 +7,13 @@
   <package id="DotNetOpenAuth.OAuth.Core" version="4.3.1.13153" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.3.1.13153" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.3.1.13153" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="0.17.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.JavaScript" version="0.11.0-build09387" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Web" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Web.TelemetryChannel" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
