--- a/Tailspin.WebUpgraded/Web.config
+++ b/Tailspin.WebUpgraded/Web.config
@@ -16,7 +16,7 @@
   
   <connectionStrings>
     <!-- Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\citc\TailspinToys\Tailspin.WebUpgraded\App_Data\Tailspin.mdf;Integrated Security=True -->
-    <add name="TailspinConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\citc\TailspinToys\Tailspin.WebUpgraded\App_Data\Tailspin.mdf;Integrated Security=True;Max Pool Size=1000" providerName="System.Data.SqlClient" />
+    <add name="TailspinConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Tailspin.mdf;Integrated Security=True;Max Pool Size=1000" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <appSettings>
