--- a/Tailspin.WebUpgraded/Web.config
+++ b/Tailspin.WebUpgraded/Web.config
@@ -8,22 +8,21 @@
     <sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
     </sectionGroup>
     <section name="microsoft.scripting" type="Microsoft.Scripting.Hosting.Configuration.Section, Microsoft.Scripting, Version=0.9.5.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="false" />
-    
-  <sectionGroup name="dotNetOpenAuth" type="DotNetOpenAuth.Configuration.DotNetOpenAuthSection, DotNetOpenAuth.Core">
-			<section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
-			<section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
-		<section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" /><section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" /></sectionGroup></configSections>
-  
+    <sectionGroup name="dotNetOpenAuth" type="DotNetOpenAuth.Configuration.DotNetOpenAuthSection, DotNetOpenAuth.Core">
+      <section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
+      <section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
+      <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" />
+      <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" />
+    </sectionGroup>
+  </configSections>
   <connectionStrings>
     <!-- Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\citc\TailspinToys\Tailspin.WebUpgraded\App_Data\Tailspin.mdf;Integrated Security=True -->
     <add name="TailspinConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Tailspin.mdf;Integrated Security=True;Max Pool Size=1000" providerName="System.Data.SqlClient" />
   </connectionStrings>
-
   <appSettings>
-    <add key="iKey" value="bb2f698c-c81a-4224-9d13-39fbf4f39452" />
-    <add key="tags" value="A" />
+    <add key="iKey" value="" />
+    <add key="tags" value="" />
   </appSettings>
-  
   <system.web>
     <!-- 
             Set compilation debug="true" to insert debugging 
@@ -118,22 +117,19 @@
       <add name="BlockViewHandlerC" path="*.ascx" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
   </system.webServer>
-  
-  
-  
-  
-<system.net>
-		<defaultProxy enabled="true" />
-		<settings>
-			<!-- This setting causes .NET to check certificate revocation lists (CRL) 
+  <system.net>
+    <defaultProxy enabled="true" />
+    <settings>
+      <!-- This setting causes .NET to check certificate revocation lists (CRL) 
 			     before trusting HTTPS certificates.  But this setting tends to not 
 			     be allowed in shared hosting environments. -->
-			<!--<servicePointManager checkCertificateRevocationList="true"/>-->
-		</settings>
-	</system.net><runtime>
-		<!-- This prevents the Windows Event Log from frequently logging that HMAC1 is being used (when the other party needs it). -->
-		<legacyHMACWarning enabled="0" />
-	<!-- When targeting ASP.NET MVC 3, this assemblyBinding makes MVC 1 and 2 references relink
+      <!--<servicePointManager checkCertificateRevocationList="true"/>-->
+    </settings>
+  </system.net>
+  <runtime>
+    <!-- This prevents the Windows Event Log from frequently logging that HMAC1 is being used (when the other party needs it). -->
+    <legacyHMACWarning enabled="0" />
+    <!-- When targeting ASP.NET MVC 3, this assemblyBinding makes MVC 1 and 2 references relink
 		     to MVC 3 so libraries such as DotNetOpenAuth that compile against MVC 1 will work with it.
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
@@ -142,56 +138,63 @@
 			</dependentAssembly>
 		</assemblyBinding>
 		 -->
-  <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-   <dependentAssembly>
-    <assemblyIdentity name="DotNetOpenAuth.AspNet" publicKeyToken="2780ccd10d57b246" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
-   </dependentAssembly>
-   <dependentAssembly>
-    <assemblyIdentity name="DotNetOpenAuth.Core" publicKeyToken="2780ccd10d57b246" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
-   </dependentAssembly>
-   <dependentAssembly>
-    <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
-   </dependentAssembly>
-   <dependentAssembly>
-    <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
-   </dependentAssembly>
-   <dependentAssembly>
-    <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
-   </dependentAssembly>
-  </assemblyBinding>
-</runtime><dotNetOpenAuth>
-		<messaging>
-			<untrustedWebRequest>
-				<whitelistHosts>
-					<!-- Uncomment to enable communication with localhost (should generally not activate in production!) -->
-					<!--<add name="localhost" />-->
-				</whitelistHosts>
-			</untrustedWebRequest>
-		</messaging>
-		<!-- Allow DotNetOpenAuth to publish usage statistics to library authors to improve the library. -->
-		<reporting enabled="true" />
-	<!-- This is an optional configuration section where aspects of dotnetopenauth can be customized. --><!-- For a complete set of configuration options see http://www.dotnetopenauth.net/developers/code-snippets/configuration-options/ --><openid>
-		<relyingParty>
-				<security requireSsl="false">
-					<!-- Uncomment the trustedProviders tag if your relying party should only accept positive assertions from a closed set of OpenID Providers. -->
-					<!--<trustedProviders rejectAssertionsFromUntrustedProviders="true">
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="DotNetOpenAuth.AspNet" publicKeyToken="2780ccd10d57b246" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DotNetOpenAuth.Core" publicKeyToken="2780ccd10d57b246" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <dotNetOpenAuth>
+    <messaging>
+      <untrustedWebRequest>
+        <whitelistHosts>
+          <!-- Uncomment to enable communication with localhost (should generally not activate in production!) -->
+          <!--<add name="localhost" />-->
+        </whitelistHosts>
+      </untrustedWebRequest>
+    </messaging>
+    <!-- Allow DotNetOpenAuth to publish usage statistics to library authors to improve the library. -->
+    <reporting enabled="true" />
+    <!-- This is an optional configuration section where aspects of dotnetopenauth can be customized. -->
+    <!-- For a complete set of configuration options see http://www.dotnetopenauth.net/developers/code-snippets/configuration-options/ -->
+    <openid>
+      <relyingParty>
+        <security requireSsl="false">
+          <!-- Uncomment the trustedProviders tag if your relying party should only accept positive assertions from a closed set of OpenID Providers. -->
+          <!--<trustedProviders rejectAssertionsFromUntrustedProviders="true">
 						<add endpoint="https://www.google.com/accounts/o8/ud" />
 					</trustedProviders>-->
-				</security>
-				<behaviors>
-					<!-- The following OPTIONAL behavior allows RPs to use SREG only, but be compatible
+        </security>
+        <behaviors>
+          <!-- The following OPTIONAL behavior allows RPs to use SREG only, but be compatible
 					     with OPs that use Attribute Exchange (in various formats). -->
-					<add type="DotNetOpenAuth.OpenId.RelyingParty.Behaviors.AXFetchAsSregTransform, DotNetOpenAuth.OpenId.RelyingParty" />
-				</behaviors>
-			</relyingParty></openid></dotNetOpenAuth><uri>
-		<!-- The uri section is necessary to turn on .NET 3.5 support for IDN (international domain names),
+          <add type="DotNetOpenAuth.OpenId.RelyingParty.Behaviors.AXFetchAsSregTransform, DotNetOpenAuth.OpenId.RelyingParty" />
+        </behaviors>
+      </relyingParty>
+    </openid>
+  </dotNetOpenAuth>
+  <uri>
+    <!-- The uri section is necessary to turn on .NET 3.5 support for IDN (international domain names),
 		     which is necessary for OpenID urls with unicode characters in the domain/host name.
 		     It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
-		<idn enabled="All" />
-		<iriParsing enabled="true" />
-	</uri></configuration>
+    <idn enabled="All" />
+    <iriParsing enabled="true" />
+  </uri>
+</configuration>
