--- a/Tailspin.WebUpgraded/Web.config
+++ b/Tailspin.WebUpgraded/Web.config
@@ -20,7 +20,7 @@
     <add name="TailspinConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Tailspin.mdf;Integrated Security=True;Max Pool Size=1000" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="iKey" value="" />
+    <add key="iKey" value="bb2f698c-c81a-4224-9d13-39fbf4f39452" />
     <add key="tags" value="" />
   </appSettings>
   <system.web>
